# qvm

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: commands.rs  completions.rs  mod.rs
src/config/: mod.rs  schema.rs
src/utils/: mod.rs  paths.rs  system.rs
src/vm/: config.rs  creator.rs  firmware.rs  manager.rs  mod.rs
tests/: integration_tests.rs
