[package]
name = "qvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1.10", features = ["v4"] }
rand = "0.8"
dirs = "5.0"
which = "6.0"
